# phala-protocol

./: README.md  STATUS.md  pyproject.toml
adrs/: 001-principal-declared-over-service-declared.md
extensions/welfare-detectors/v1/: SPEC.md  manifest.json
extensions/welfare_detectors/: README.md  STATUS.md  WelfareDetectors.cfg  WelfareDetectors.tla
simulations/: participation_weight.py  travel_booking.py  valence_ref.py  welfare_adjustment.py
specification/: Phala.cfg  Phala.tla
src/phala/: __init__.py
src/phala/extensions/: __init__.py
src/phala/extensions/welfare_detectors/: __init__.py  types.py  validators.py
src/phala/mcp_server/: EXAMPLES.md  README.md  __init__.py  __main__.py  server.py  tools.py
src/phala/types/: __init__.py  belief_update.py  outcome_event.py  phala_service_ref.py  principal_satisfaction_model.py  satisfaction_record.py  welfare_trace.py
src/phala/validators/: __init__.py  belief.py
tests/: test_extension_uris.py  test_phala_service_ref.py  test_types.py
tests/extensions/: test_welfare_detectors.py
tests/mcp_server/: test_server_stdio.py  test_tools.py
v1/: README.md  SPEC.md  manifest.json
